# crate-sieve-form

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PROJECT.md  README.md
.beads/: config_kv.json  interactions.jsonl  last-touched  metadata.json
.beads/backup/: backup_state.json  manifest  tb2vurbn8nocmrqsvugckoiv3i7paijc.darc
.beads/issues/: crate-sieve-form-03l.json  crate-sieve-form-0d4.json  crate-sieve-form-10p.1.json  crate-sieve-form-10p.10.json  crate-sieve-form-10p.11.json  crate-sieve-form-10p.12.json  crate-sieve-form-10p.13.json  crate-sieve-form-10p.14.json  crate-sieve-form-10p.15.json  crate-sieve-form-10p.16.json  crate-sieve-form-10p.17.json  crate-sieve-form-10p.18.json  crate-sieve-form-10p.19.json  crate-sieve-form-10p.2.json  crate-sieve-form-10p.20.json  crate-sieve-form-10p.21.json  crate-sieve-form-10p.22.json  crate-sieve-form-10p.23.json  crate-sieve-form-10p.24.json  crate-sieve-form-10p.25.json  crate-sieve-form-10p.26.json  crate-sieve-form-10p.27.json  crate-sieve-form-10p.28.json  crate-sieve-form-10p.29.json  crate-sieve-form-10p.3.json  crate-sieve-form-10p.30.json  crate-sieve-form-10p.31.json  crate-sieve-form-10p.32.json  crate-sieve-form-10p.33.json  crate-sieve-form-10p.34.json  crate-sieve-form-10p.35.json  crate-sieve-form-10p.4.json  crate-sieve-form-10p.5.json  crate-sieve-form-10p.6.json  crate-sieve-form-10p.7.json  crate-sieve-form-10p.8.json  (+291 more)
docs/: INDEX.md  SOURCES.md
scripts/: fetch-docs.sh
src/: evaluator.rs  form.rs  lexer.rs  lib.rs  message.rs  parse_error.rs
tests/: rfc_vectors.rs
(+1 files in other folders)
