[package]
name = "sieve-form"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
readme = "README.md"
description = "Sieve email filter language (RFC 5228 + RFC 5229) on a uniform form representation"
repository = "https://github.com/MarkAtwood/crate-sieve-form"
keywords = ["sieve", "email", "filter", "rfc5228", "imap"]
categories = ["email", "parser-implementations"]
exclude = [
    "audit/",
    ".beads/",
    ".claude/",
    "docs/",
    "scripts/",
    "AGENTS.md",
    "CLAUDE.md",
    "PROJECT.md",
]

[dependencies]
fancy-regex = "0.13"
